// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-based-view/IconWithTooltip get IconClose with Tooltip to cancel edited value 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text={
    Object {
      "defaultMessage": "Cancel",
      "id": "be.cancel",
    }
  }
  theme="default"
>
  <PlainButton
    className="bdl-MetadataBasedItemList-cell--cancelIcon"
    onClick={[Function]}
    type="button"
  >
    <IconClose
      color="#767676"
      height={16}
      width={16}
    />
  </PlainButton>
</Tooltip>
`;

exports[`features/metadata-based-view/IconWithTooltip get IconPencil with Tooltip to enter edit mode 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text={
    Object {
      "defaultMessage": "Edit",
      "id": "be.editLabel",
    }
  }
  theme="default"
>
  <PlainButton
    onClick={[Function]}
    type="button"
  >
    <IconPencil />
  </PlainButton>
</Tooltip>
`;

exports[`features/metadata-based-view/IconWithTooltip get IconSave with Tooltip to save edited value 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text={
    Object {
      "defaultMessage": "Save",
      "id": "be.save",
    }
  }
  theme="default"
>
  <PlainButton
    className="bdl-MetadataBasedItemList-cell--saveIcon"
    onClick={[Function]}
    type="button"
  >
    <IconCheck
      color="#767676"
      height={16}
      width={16}
    />
  </PlainButton>
</Tooltip>
`;
